--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "migrate:dev": "knex migrate:latest",
     "rollback:dev": "knex migrate:rollback",
     "seed:dev": "knex seed:run",
-    "migrate:prod": "heroku run knex migrate:latest -a my-anywhere-fitness-09",
-    "rollback:prod": "heroku run knex migrate:rollback -a my-anywhere-fitness-09",
-    "database:prod": "heroku pg:psql -a my-anywhere-fitness-09",
-    "seed:prod": "heroku run knex seed:run -a my-anywhere-fitness-09",
+    "migrate:prod": "heroku run knex migrate:latest -a ft-anywhere-fitness-09",
+    "rollback:prod": "heroku run knex migrate:rollback -a ft-anywhere-fitness-09",
+    "database:prod": "heroku pg:psql -a ft-anywhere-fitness-09",
+    "seed:prod": "heroku run knex seed:run -a ft-anywhere-fitness-09",
     "test": "cross-env NODE_ENV=testing jest --verbose --runInBand",
     "deploy": "git push heroku main"
   },
