--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "start": "node index.js",
     "server": "nodemon index.js",
+    "heroku-postbuild": "cd api/client && npm i && npm run build",
     "migrate:dev": "knex migrate:latest",
     "rollback:dev": "knex migrate:rollback",
     "seed:dev": "knex seed:run",
@@ -24,7 +25,6 @@
     "dotenv": "14.3.0",
     "express": "4.17.2",
     "helmet": "5.0.2",
-    "jsonwebtoken": "^8.5.1",
     "knex": "1.0.1",
     "knex-cleaner": "1.3.1",
     "pg": "8.7.1"
